fix: adjust font sizes in index.css for improved readability

--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,12 @@
   16px * 0.75 = 12px.
 */
 html {
-  font-size: 14px;
+  font-size: 13px;
 }
 
 @media (min-width: 768px) {
   html {
-    font-size: 18px;
+    font-size: 17px;
   }
 }
 
